// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (geleverd) 1`] = `
<DocumentFragment>
  <div
    class="ams-grid cobrowse-redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/3917854581"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (geleverd)
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Hulp bij het huishouden (geleverd)
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_240c86"
      >
        <dt
          class="_Datalist__title_240c86"
        >
          Aanbieder
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          Emile Thuiszorg
        </dd>
      </dl>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="_Steps_5b0b8a"
      >
        <h3
          class="ams-heading ams-heading--2 ams-mb-m"
        >
          Status
        </h3>
        <ol
          class="ams-ordered-list ams-ordered-list--no-markers _StepsList_5b0b8a"
        >
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              Besluit
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2022-01-15"
            >
              15 januari 2022
            </time>
            <div>
              
              
              <p
                class="ams-paragraph"
              >
                
                U heeft recht op hulp bij het huishouden (geleverd) per 15 december 2021.
              
              </p>
              
              
              <p
                class="ams-paragraph"
              >
                
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                <u>
                  hoe u van aanbieder kunt wisselen.
                </u>
                
                  
              
              </p>
              
            
            </div>
            <p
              class="ams-paragraph"
            >
              
            
              <strong>
                
              U krijgt dit besluit per post.
            
              </strong>
              
          
            </p>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--active_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Huidige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Levering gestart
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (geleverd).
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Toekomstige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Levering gestopt
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Niet van toepassing.
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Toekomstige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Einde recht
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Uw recht op hulp bij het huishouden (geleverd) is beëindigd per 
          
              </p>
            </div>
          </li>
        </ol>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (gestopt) 1`] = `
<DocumentFragment>
  <div
    class="ams-grid cobrowse-redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/8927959"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (gestopt)
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Hulp bij het huishouden (gestopt)
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_240c86"
      >
        <dt
          class="_Datalist__title_240c86"
        >
          Aanbieder
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          Emile Thuiszorg
        </dd>
      </dl>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="_Steps_5b0b8a"
      >
        <h3
          class="ams-heading ams-heading--2 ams-mb-m"
        >
          Status
        </h3>
        <ol
          class="ams-ordered-list ams-ordered-list--no-markers _StepsList_5b0b8a"
        >
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              Besluit
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2022-01-15"
            >
              15 januari 2022
            </time>
            <div>
              
              
              <p
                class="ams-paragraph"
              >
                
                U heeft recht op hulp bij het huishouden (gestopt) per 15 december 2021.
              
              </p>
              
              
              <p
                class="ams-paragraph"
              >
                
                In de brief leest u ook hoe u bezwaar kunt maken of een klacht kan
              indienen.
              
              </p>
              
            
            </div>
            <p
              class="ams-paragraph"
            >
              
            
              <strong>
                
              U heeft dit besluit per post ontvangen.
            
              </strong>
              
          
            </p>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              Levering gestart
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (gestopt).
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              Levering gestopt
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Emile Thuiszorg heeft aan ons doorgegeven dat u geen hulp bij het huishouden (gestopt)
            meer krijgt.
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--active_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Huidige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Einde recht
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2022-01-22"
            >
              22 januari 2022
            </time>
            <div>
              <p
                class="ams-paragraph"
              >
                
            Uw recht op hulp bij het huishouden (gestopt) is beëindigd per 22 januari 2022
          
              </p>
            </div>
          </li>
        </ol>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (nog niet geleverd) 1`] = `
<DocumentFragment>
  <div
    class="ams-grid cobrowse-redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/102996420"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (nog niet geleverd)
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Hulp bij het huishouden (nog niet geleverd)
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_240c86"
      >
        <dt
          class="_Datalist__title_240c86"
        >
          Aanbieder
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          Emile Thuiszorg
        </dd>
      </dl>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="_Steps_5b0b8a"
      >
        <h3
          class="ams-heading ams-heading--2 ams-mb-m"
        >
          Status
        </h3>
        <ol
          class="ams-ordered-list ams-ordered-list--no-markers _StepsList_5b0b8a"
        >
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--active_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Huidige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Besluit
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2022-01-15"
            >
              15 januari 2022
            </time>
            <div>
              
              
              <p
                class="ams-paragraph"
              >
                
                U heeft recht op hulp bij het huishouden (nog niet geleverd) per 15 januari 2022.
              
              </p>
              
              
              <p
                class="ams-paragraph"
              >
                
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                <u>
                  hoe u van aanbieder kunt wisselen.
                </u>
                
                  
              
              </p>
              
            
            </div>
            <p
              class="ams-paragraph"
            >
              
            
              <strong>
                
              U krijgt dit besluit per post.
            
              </strong>
              
          
            </p>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Toekomstige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Levering gestart
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (nog niet geleverd).
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Toekomstige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Levering gestopt
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Niet van toepassing.
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Toekomstige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Einde recht
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Uw recht op hulp bij het huishouden (nog niet geleverd) is beëindigd per 
          
              </p>
            </div>
          </li>
        </ol>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (tijdelijk gestopt) 1`] = `
<DocumentFragment>
  <div
    class="ams-grid cobrowse-redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/879359140"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (tijdelijk gestopt)
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Hulp bij het huishouden (tijdelijk gestopt)
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_240c86"
      >
        <dt
          class="_Datalist__title_240c86"
        >
          Aanbieder
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          Emile Thuiszorg
        </dd>
      </dl>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="_Steps_5b0b8a"
      >
        <h3
          class="ams-heading ams-heading--2 ams-mb-m"
        >
          Status
        </h3>
        <ol
          class="ams-ordered-list ams-ordered-list--no-markers _StepsList_5b0b8a"
        >
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              Besluit
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2022-01-15"
            >
              15 januari 2022
            </time>
            <div>
              
              
              <p
                class="ams-paragraph"
              >
                
                U heeft recht op hulp bij het huishouden (tijdelijk gestopt) per 15 december 2021.
              
              </p>
              
              
              <p
                class="ams-paragraph"
              >
                
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                <u>
                  hoe u van aanbieder kunt wisselen.
                </u>
                
                  
              
              </p>
              
            
            </div>
            <p
              class="ams-paragraph"
            >
              
            
              <strong>
                
              U krijgt dit besluit per post.
            
              </strong>
              
          
            </p>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              Levering gestart
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (tijdelijk gestopt).
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--active_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Huidige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Levering gestopt
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Niet van toepassing.
          
              </p>
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Toekomstige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Einde recht
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
            />
            <div>
              <p
                class="ams-paragraph"
              >
                
            Uw recht op hulp bij het huishouden (tijdelijk gestopt) is beëindigd per 
          
              </p>
            </div>
          </li>
        </ol>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Wmo item 1 1`] = `
<DocumentFragment>
  <div
    class="ams-grid cobrowse-redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/wmo-item-1"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Wmo item 1
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Wmo item 1
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_240c86"
      >
        <dt
          class="_Datalist__title_240c86"
        >
          Aanbieder
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          Mantelzorg B.V
        </dd>
      </dl>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="_Steps_5b0b8a"
      >
        <h3
          class="ams-heading ams-heading--2 ams-mb-m"
        >
          Status
        </h3>
        <ol
          class="ams-ordered-list ams-ordered-list--no-markers _StepsList_5b0b8a"
        >
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--active_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Huidige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Levering gestart
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2020-07-24"
            >
              24 juli 2020
            </time>
            <div>
              De levering van uw thuizorg is gestart
            </div>
          </li>
        </ol>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
